# ksj

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
catalog/: annotations.yaml  datasets.yaml
docs/: README.md  architecture.md  catalog.md  cli.md  integration.md  json-output.md  risks.md  roadmap.md
src/ksj/: __init__.py  __main__.py  _http.py  cli.py  errors.py  html_cache.py
src/ksj/catalog/: __init__.py  _normalizers.py  _parser.py  loader.py  refresh.py  schema.py
src/ksj/downloader/: __init__.py  client.py  manifest.py  selector.py
src/ksj/handlers/: __init__.py  _catalog_loader.py  catalog.py  download.py  html.py  info.py  ingest_local.py  integrate.py  list_datasets.py
src/ksj/integrator/: __init__.py  pipeline.py  schema_unify.py  source_selector.py
src/ksj/reader/: __init__.py  integrated.py  vector.py
src/ksj/renderers/: __init__.py  json_render.py  rich_render.py
src/ksj/writer/: __init__.py  geopackage.py  parquet.py
tests/: conftest.py  test_catalog_loader.py  test_catalog_schema.py  test_cli_convert.py  test_cli_json.py  test_cli_smoke.py  test_html_cache.py  test_normalizers.py  test_parser.py  test_smoke.py
tests/fixtures/catalog/: phase3_fixture.yaml
tests/fixtures/ksj/: A03.html  A55-2024.html  G04-a.html  L03-b-2021.html  N03-2025.html  N13-2024.html  index.html  mesh1000h30.html
tests/test_downloader/: test_cli.py  test_client.py  test_manifest.py  test_selector.py
tests/test_integrator/: test_pipeline.py  test_reader_integrated.py  test_reader_vector.py  test_schema_unify.py  test_source_selector.py  test_writer_geopackage.py  test_writer_parquet.py
