[project]
name = "ksj"
version = "0.1.0"
description = "国土数値情報 (KSJ) のカタログ管理・ダウンロード・統合を行う CLI ツール"
readme = "README.md"
authors = [
    { name = "jumboly", email = "jumboly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "typer>=0.12",
]

[project.scripts]
ksj = "ksj.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
