[project]
name = "ksj"
version = "0.1.0"
description = "国土数値情報 (KSJ) のカタログ管理・ダウンロード・統合を行う CLI ツール"
readme = "README.md"
authors = [
    { name = "jumboly", email = "jumboly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "pydantic>=2.13.2",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "shapely>=2.1.2",
    "tenacity>=9.1.4",
    "typer>=0.12",
]

[project.scripts]
ksj = "ksj.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.6",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "RUF001", # 文字列中の全角括弧を許容 (日本語テキスト)
    "RUF002", # docstring 内の全角記号 (日本語)
    "RUF003", # コメント中の全角括弧 (日本語)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true

# 地理空間ライブラリは型スタブを公式提供していない。本体コードでも Any 化を避けるため、
# 「import 不可エラーの抑制」のみ行い、関数シグネチャは自前で書く。
[[tool.mypy.overrides]]
module = ["geopandas", "geopandas.*", "pyogrio", "pyogrio.*", "shapely", "shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
asyncio_mode = "auto"
